# Graph-Isomorphism

./: CMakeLists.txt  graph_utils.cpp  graph_utils.h  main.cpp  mingw-toolchain.cmake
.github/workflows/: cross_compile.yml  windows-build.yml
